definition text wrap css fix

--- a/src/components/Definitions/Definitions.css
+++ b/src/components/Definitions/Definitions.css
@@ -8,6 +8,8 @@
   border: 10px solid rgb(105, 105, 105);
   border-radius: 10px;
   overflow-x: hidden;
+  inline-size: 95%;
+  overflow-wrap: break-word;
 }
 .fallback-definitionBox-text {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
